# training-factory

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/: config.toml
docs/: architecture_review_step3.md  architecture_v1.md  architecture_v2.md  graph.md  graph.mmd  review_template.md
plans/: 00_scaffold_repo.md  01_state_and_schemas.md  02_graph_wiring_and_llm_agents.md  03_json_hardening.md  04_lab.md  05_templates.md  06_search_provider_abstraction.md  07_research_slice_context_pack.md  08_wire_research_into_brief_grounded.md  09_research_qa_and_routing.md  10_research_full_page_enrichment.md  11_curriculum_grounding.md  12_qa_grounding_presence_validity.md  13_qa_authority_tier_enforcement.md  14_eval_phase_a_smoke_tests.md  15_research_snippet_quality_filtering.md  16_research_topic_anchor_queries.md  17_eval_matrix_phases_abc.md
schemas/: brief.schema.json  bundle.schema.json  curriculum.schema.json  lab.schema.json  qa.schema.json  research.schema.json  research_qa.schema.json  slides.schema.json  templates.schema.json
scripts/: eval_phase_b.py
tests/: conftest.py  test_brief_grounding.py  test_cli_generate.py  test_curriculum_grounding.py  test_eval_phase_b_smoke.py  test_fetch_extract_filtering.py  test_graph_research_routing.py  test_graph_routing.py  test_graph_smoke.py  test_json_extract.py  test_llm_offline.py  test_qa_authority_tier.py  test_qa_grounding.py  test_research_agent.py  test_research_full_page_enrichment.py  test_research_qa.py  test_research_registry.py  test_research_topic_anchors.py  test_slides_agent.py  (+1 more)
(+31 files in other folders)
