[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "training-factory"
version = "0.1.0"
description = "LangGraph-based training content scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "training-factory" }]
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "jsonschema>=4.23.0",
  "tenacity>=9.0.0",
  "requests>=2.32.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.scripts]
training-factory = "training_factory.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/training_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "streamlit>=1.54.0",
]
